--- a/srv/salt/apache/example.conf
+++ b/srv/salt/apache/example.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
  ServerName change.example.com
  ServerAlias www.change.example.com
- DocumentRoot /home/vagrant/examplewww/pyora.example.com
- <Directory /home/vagrant/examplewww/pyora.example.com>
+ DocumentRoot /home/vagrant/examplewww/index.html
+ <Directory /home/vagrant/examplewww/index.html
    Require all granted
  </Directory>
 </VirtualHost>
