--- a/apache/example.conf
+++ b/apache/example.conf
@@ -2,7 +2,7 @@
  ServerName change.example.com
  ServerAlias www.change.example.com
  DocumentRoot /home/vagrant/examplewww/index.html
- <Directory /home/vagrant/examplewww/index.html
+ <Directory /home/vagrant/examplewww/index.html>
    Require all granted
  </Directory>
 </VirtualHost>
