--- a/apache/example.conf
+++ b/apache/example.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
- DocumentRoot /home/vagrant/examplewww/index.html
- <Directory /home/vagrant/examplewww/index.html>
+ DocumentRoot /home/vagrant/examplewww/
+ <Directory /home/vagrant/examplewww/>
    Require all granted
  </Directory>
 </VirtualHost>
